--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,16 +5,24 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
+
     - name: Build with Maven
       run: mvn clean install
+
     - name: Run tests
       run: mvn test
+
